// Vitest Snapshot v1

exports[`lib/notion/update-current-weather > colors cool temperature blue 1`] = `
"# 🌑 40° {💙}
| Wed, 12/28 | 23° {💙} / {🩶} 62° {🧡} | 🌪  |
| ---------- | ------------------------ | --- |
| Thu, 12/29 | 45° {💙} / {🩶} 66° {🧡} | ⛅️  |
| ---------- | ------------------------ | --- |
| Fri, 12/30 | 43° {💙} / {🩶} 66° {🧡} | 💨  |
| ---------- | ------------------------ | --- |
| Sat, 12/31 | 33° {💙} / {🩶} 54° {🧡} | ☔️ (85%) {🩶}  |
| ---------- | ------------------------ | -------------- |
| Sun, 1/1 | 25° {💙} / {🩶} 51° {🧡} | ❄️  |
| -------- | ------------------------ | --- |
| Mon, 1/2 | 26° {💙} / {🩶} 51° {🧡} | 🌫  |
| -------- | ------------------------ | --- |
| Tue, 1/3 | 29° {💙} / {🩶} 63° {🧡} | 🥵  |
| -------- | ------------------------ | --- |
| Wed, 1/4 | 28° {💙} / {🩶} 44° {🧡} | 🌀  |
| -------- | ------------------------ | --- |
Updated Dec 28, 12:00am {🩶}
"
`;

exports[`lib/notion/update-current-weather > colors hot temperature orange 1`] = `
"# ☀️ 85° {🧡}
| Wed, 12/28 | 23° {💙} / {🩶} 62° {🧡} | 🌪  |
| ---------- | ------------------------ | --- |
| Thu, 12/29 | 45° {💙} / {🩶} 66° {🧡} | ⛅️  |
| ---------- | ------------------------ | --- |
| Fri, 12/30 | 43° {💙} / {🩶} 66° {🧡} | 💨  |
| ---------- | ------------------------ | --- |
| Sat, 12/31 | 33° {💙} / {🩶} 54° {🧡} | ☔️ (85%) {🩶}  |
| ---------- | ------------------------ | -------------- |
| Sun, 1/1 | 25° {💙} / {🩶} 51° {🧡} | ❄️  |
| -------- | ------------------------ | --- |
| Mon, 1/2 | 26° {💙} / {🩶} 51° {🧡} | 🌫  |
| -------- | ------------------------ | --- |
| Tue, 1/3 | 29° {💙} / {🩶} 63° {🧡} | 🥵  |
| -------- | ------------------------ | --- |
| Wed, 1/4 | 28° {💙} / {🩶} 44° {🧡} | 🌀  |
| -------- | ------------------------ | --- |
Updated Dec 28, 12:00am {🩶}
"
`;

exports[`lib/notion/update-current-weather > colors sweltering temperature red 1`] = `
"# 🌨 100° {💔}
| Wed, 12/28 | 23° {💙} / {🩶} 62° {🧡} | 🌪  |
| ---------- | ------------------------ | --- |
| Thu, 12/29 | 45° {💙} / {🩶} 66° {🧡} | ⛅️  |
| ---------- | ------------------------ | --- |
| Fri, 12/30 | 43° {💙} / {🩶} 66° {🧡} | 💨  |
| ---------- | ------------------------ | --- |
| Sat, 12/31 | 33° {💙} / {🩶} 54° {🧡} | ☔️ (85%) {🩶}  |
| ---------- | ------------------------ | -------------- |
| Sun, 1/1 | 25° {💙} / {🩶} 51° {🧡} | ❄️  |
| -------- | ------------------------ | --- |
| Mon, 1/2 | 26° {💙} / {🩶} 51° {🧡} | 🌫  |
| -------- | ------------------------ | --- |
| Tue, 1/3 | 29° {💙} / {🩶} 63° {🧡} | 🥵  |
| -------- | ------------------------ | --- |
| Wed, 1/4 | 28° {💙} / {🩶} 44° {🧡} | 🌀  |
| -------- | ------------------------ | --- |
Updated Dec 28, 12:00am {🩶}
"
`;

exports[`lib/notion/update-current-weather > colors warm temperature green 1`] = `
"# ☁️ 60° {💚}
| Wed, 12/28 | 23° {💙} / {🩶} 62° {🧡} | 🌪  |
| ---------- | ------------------------ | --- |
| Thu, 12/29 | 45° {💙} / {🩶} 66° {🧡} | ⛅️  |
| ---------- | ------------------------ | --- |
| Fri, 12/30 | 43° {💙} / {🩶} 66° {🧡} | 💨  |
| ---------- | ------------------------ | --- |
| Sat, 12/31 | 33° {💙} / {🩶} 54° {🧡} | ☔️ (85%) {🩶}  |
| ---------- | ------------------------ | -------------- |
| Sun, 1/1 | 25° {💙} / {🩶} 51° {🧡} | ❄️  |
| -------- | ------------------------ | --- |
| Mon, 1/2 | 26° {💙} / {🩶} 51° {🧡} | 🌫  |
| -------- | ------------------------ | --- |
| Tue, 1/3 | 29° {💙} / {🩶} 63° {🧡} | 🥵  |
| -------- | ------------------------ | --- |
| Wed, 1/4 | 28° {💙} / {🩶} 44° {🧡} | 🌀  |
| -------- | ------------------------ | --- |
Updated Dec 28, 12:00am {🩶}
"
`;

exports[`lib/notion/update-current-weather > displays rain icon and probability if rain 1`] = `
"# ☔️ (45%) {🩶} 23° {💜}
| Wed, 12/28 | 23° {💙} / {🩶} 62° {🧡} | 🌪  |
| ---------- | ------------------------ | --- |
| Thu, 12/29 | 45° {💙} / {🩶} 66° {🧡} | ⛅️  |
| ---------- | ------------------------ | --- |
| Fri, 12/30 | 43° {💙} / {🩶} 66° {🧡} | 💨  |
| ---------- | ------------------------ | --- |
| Sat, 12/31 | 33° {💙} / {🩶} 54° {🧡} | ☔️ (85%) {🩶}  |
| ---------- | ------------------------ | -------------- |
| Sun, 1/1 | 25° {💙} / {🩶} 51° {🧡} | ❄️  |
| -------- | ------------------------ | --- |
| Mon, 1/2 | 26° {💙} / {🩶} 51° {🧡} | 🌫  |
| -------- | ------------------------ | --- |
| Tue, 1/3 | 29° {💙} / {🩶} 63° {🧡} | 🥵  |
| -------- | ------------------------ | --- |
| Wed, 1/4 | 28° {💙} / {🩶} 44° {🧡} | 🌀  |
| -------- | ------------------------ | --- |
Updated Dec 28, 12:00am {🩶}
"
`;

exports[`lib/notion/update-current-weather > displays snow icon and accumulation if snow 1`] = `
"# ❄️ (0.98in) {🩶} 23° {💜}
| Wed, 12/28 | 23° {💙} / {🩶} 62° {🧡} | 🌪  |
| ---------- | ------------------------ | --- |
| Thu, 12/29 | 45° {💙} / {🩶} 66° {🧡} | ⛅️  |
| ---------- | ------------------------ | --- |
| Fri, 12/30 | 43° {💙} / {🩶} 66° {🧡} | 💨  |
| ---------- | ------------------------ | --- |
| Sat, 12/31 | 33° {💙} / {🩶} 54° {🧡} | ☔️ (85%) {🩶}  |
| ---------- | ------------------------ | -------------- |
| Sun, 1/1 | 25° {💙} / {🩶} 51° {🧡} | ❄️  |
| -------- | ------------------------ | --- |
| Mon, 1/2 | 26° {💙} / {🩶} 51° {🧡} | 🌫  |
| -------- | ------------------------ | --- |
| Tue, 1/3 | 29° {💙} / {🩶} 63° {🧡} | 🥵  |
| -------- | ------------------------ | --- |
| Wed, 1/4 | 28° {💙} / {🩶} 44° {🧡} | 🌀  |
| -------- | ------------------------ | --- |
Updated Dec 28, 12:00am {🩶}
"
`;

exports[`lib/notion/update-current-weather > updates the current weather block and daily weather table 1`] = `
"# 🥶 23° {💜}
| Wed, 12/28 | 23° {💙} / {🩶} 62° {🧡} | 🌪  |
| ---------- | ------------------------ | --- |
| Thu, 12/29 | 45° {💙} / {🩶} 66° {🧡} | ⛅️  |
| ---------- | ------------------------ | --- |
| Fri, 12/30 | 43° {💙} / {🩶} 66° {🧡} | 💨  |
| ---------- | ------------------------ | --- |
| Sat, 12/31 | 33° {💙} / {🩶} 54° {🧡} | ☔️ (85%) {🩶}  |
| ---------- | ------------------------ | -------------- |
| Sun, 1/1 | 25° {💙} / {🩶} 51° {🧡} | ❄️  |
| -------- | ------------------------ | --- |
| Mon, 1/2 | 26° {💙} / {🩶} 51° {🧡} | 🌫  |
| -------- | ------------------------ | --- |
| Tue, 1/3 | 29° {💙} / {🩶} 63° {🧡} | 🥵  |
| -------- | ------------------------ | --- |
| Wed, 1/4 | 28° {💙} / {🩶} 44° {🧡} | 🌀  |
| -------- | ------------------------ | --- |
Updated Dec 28, 12:00am {🩶}
"
`;
